# kgp-backend

./: .gitignore  CMakeLists.txt  Config.h.in  README.md  opi-backend.cpp  packageinfo.conf
debian/: README  changelog  control  copyright  init.d  opi-backend.dirs  opi-backend.install  opi-backend.service  opi-backend.upstart  rules
pytest/: opi_backend.py  testopibackend.py
shell/: 900-update-pkgstatus  disable_shell.sh  dropbear-bin_2016.74-5_armhf.deb  dropbear-bin_2018.76-5_amd64.deb  dropbear-bin_2018.76-5_arm64.deb  dropbear-run_2016.74-5_all.deb  dropbear-run_2018.76-5_all.deb  dropbear_2014.65-1ubuntu1_armhf.deb  enable_shell.sh
shell/arm64/: libtomcrypt1_1.18.2-1_arm64.deb  libtommath1_1.1.0-3_arm64.deb
shell/armhf/: dropbear-bin_2018.76-5_armhf.deb  libtomcrypt1_1.18.2-1_armhf.deb  libtommath1_1.1.0-3_armhf.deb
src/: CMakeLists.txt  FetchmailConfig.cpp  FetchmailConfig.h  MailConfig.cpp  MailConfig.h  NetworkConfig.cpp  NetworkConfig.h  OpiBackendApp.cpp  OpiBackendApp.h  OpiBackendServer.cpp  OpiBackendServer.h  Secop.cpp  Secop.h  SmtpClientConfig.cpp  SmtpClientConfig.h  SmtpConfig.cpp  SmtpConfig.h  WebClient.cpp  WebClient.h
test/: CMakeLists.txt  TestFetchmailConfig.cpp  TestFetchmailConfig.h  TestJson.cpp  TestJson.h  TestMailAliasFile.cpp  TestMailConfig.cpp  TestMailConfig.h  TestNetworkConfig.cpp  TestResolverConfig.cpp  TestSmtpClient.cpp  test.cpp
